--- a/app/src/main/res/layout/recyclerview_cart_item.xml
+++ b/app/src/main/res/layout/recyclerview_cart_item.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    style="@style/Widget.MaterialComponents.CardView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="8dp">
@@ -19,7 +20,8 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.0"
-            app:srcCompat="@drawable/side_nav_bar" />
+            app:srcCompat="@drawable/side_nav_bar"
+            tools:ignore="ContentDescription,HardcodedText" />
 
         <TextView
             android:id="@+id/title_product_title_cart"
@@ -48,7 +50,8 @@
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/image_product_cart_list"
-            app:layout_constraintTop_toBottomOf="@+id/spinner_item_cart_list" />
+            app:layout_constraintTop_toBottomOf="@+id/spinner_item_cart_list"
+            tools:ignore="HardcodedText" />
 
         <TextView
             android:id="@+id/text_total_to_pay_cart_item"
@@ -85,7 +88,8 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_delete" />
+            app:srcCompat="@drawable/ic_delete"
+            tools:ignore="ContentDescription,HardcodedText" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-</androidx.cardview.widget.CardView>
+</com.google.android.material.card.MaterialCardView>
