--- a/app/src/main/res/layout/recyclerview_history_item.xml
+++ b/app/src/main/res/layout/recyclerview_history_item.xml
@@ -20,7 +20,8 @@
             android:text="TextView"
             android:textSize="24sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="HardcodedText" />
 
         <Button
             android:id="@+id/button_detail_history"
@@ -44,7 +45,8 @@
             android:text="Total pay:"
             android:textSize="18sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/text_date_history" />
+            app:layout_constraintTop_toBottomOf="@+id/text_date_history"
+            tools:ignore="HardcodedText" />
 
         <TextView
             android:id="@+id/text_status_history"
@@ -54,7 +56,8 @@
             android:layout_marginTop="8dp"
             android:text="TextView"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="HardcodedText" />
 
         <TextView
             android:id="@+id/text_pay_history"
@@ -67,7 +70,8 @@
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="@+id/textView7"
             app:layout_constraintStart_toEndOf="@+id/textView7"
-            app:layout_constraintTop_toTopOf="@+id/textView7" />
+            app:layout_constraintTop_toTopOf="@+id/textView7"
+            tools:ignore="HardcodedText" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
