--- a/app/src/main/res/layout/recyclerview_type_item.xml
+++ b/app/src/main/res/layout/recyclerview_type_item.xml
@@ -22,7 +22,8 @@
         app:layout_constraintBottom_toBottomOf="@+id/image_type_adapter"
         app:layout_constraintEnd_toEndOf="@+id/image_type_adapter"
         app:layout_constraintStart_toStartOf="@+id/image_type_adapter"
-        app:layout_constraintTop_toTopOf="@+id/image_type_adapter" />
+        app:layout_constraintTop_toTopOf="@+id/image_type_adapter"
+        tools:ignore="HardcodedText" />
 
     <ImageView
         android:id="@+id/image_type_adapter"
@@ -33,5 +34,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/craft_preview" />
+        app:srcCompat="@drawable/craft_preview"
+        tools:ignore="ContentDescription" />
 </androidx.constraintlayout.widget.ConstraintLayout>
